--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,16 @@ h6 {
   padding: 0;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 :root {
   --paragraph-font: "Urbanist", sans-serif;
   --heading-font: "Roboto Serif", serif;
@@ -33,26 +43,46 @@ h6 {
   display: block;
 }
 
+.common-heading {
+  font-family: var(--heading-font);
+  font-size: 40px;
+  color: var(--black);
+  text-align: center;
+}
+
+.mb-50 {
+  margin-bottom: 50px;
+}
+
 /**********************Navbar css************************/
 .main-header {
   width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
   font-family: var(--paragraph-font);
   padding: 15px 0;
   background-color: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 11;
+  transition: 0.6s;
 }
 
-.main-header .navbar .nav-item .dropdown-menu {
-  display: block;
-  border: none;
-  margin-top: 0;
-  top: 150%;
-  opacity: 0;
-  visibility: hidden;
-  transition: .5s;
+.main-header.sticky {
+  background: #fff;
+  padding: 7px 0;
+  transition: 0.6s;
 }
+
+.main-header.sticky .navbar .navbar-nav a {
+  color: var(--bg-color);
+  transition: 0.6s;
+}
+
+.main-header.sticky .navbar img {
+  width: 55%;
+  transition: 0.6s;
+}
+
 
 .main-header .navbar .navbar-nav a {
   color: var(--white);
@@ -62,7 +92,7 @@ h6 {
   position: relative;
   padding: 10px 0;
   line-height: 15px;
-  transition: .3s;
+  transition: 0.6s;
 }
 
 .main-header .navbar .navbar-nav a:hover {
@@ -133,6 +163,18 @@ h6 {
   padding: 0 10px 10px 0;
 }
 
+.slider-content .slick-slide {
+  position: relative;
+}
+
+.slider-content img {
+  max-width: 100%;
+  height: auto;
+  opacity: 1 !important;
+  animation-duration: 3s;
+  transition: all 1s ease;
+}
+
 .slider-thumb div {
   width: 100% !important;
 }
@@ -157,7 +199,7 @@ h6 {
   width: 10px;
   height: 10px;
   background-color: var(--secondary-color);
-  right: 0px;
+  right: -9px;
   bottom: -5px;
   border-radius: 50px;
   opacity: 0;
@@ -173,6 +215,18 @@ h6 {
 .slider-thumb .slider-thumb-content img {
   width: 100%;
 }
+
+/* .slider-content .slick-slide::before {
+  background: linear-gradient(90deg, rgb(4, 35, 70), rgba(0, 0, 0, 0));
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  z-index: 2;
+  width: 25%;
+} */
 
 .slider-thumb .slider-thumb-content .icons {
   width: 55px;
@@ -258,4 +312,789 @@ h6 {
 .slider-thumb .slick-slide.slick-current:before {
   opacity: 1;
   transition: all 0.5s ease;
+}
+
+.banner-content {
+  position: absolute;
+  z-index: 1111111;
+  top: 40%;
+  left: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.banner-content h1 {
+  font-family: var(--paragraph-font);
+  font-size: 65px;
+  text-align: center;
+  font-weight: 400;
+  color: var(--white);
+}
+
+.banner-content h1 span {
+  color: var(--secondary-color);
+  font-weight: 600;
+}
+
+.animated {
+  transition: all .5s ease;
+}
+
+.slider [data-animation-in] {
+  opacity: 0;
+  animation-duration: 1.5s;
+  transition: opacity 0.5s ease 0.3s;
+}
+
+@keyframes zoomInImage {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+
+  to {
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+}
+
+.zoomInImage {
+  animation-name: zoomInImage;
+}
+
+/*********************Homepage Counter Css***********************/
+.homepage-counter {
+  width: 100%;
+  background-color: var(--bg-color);
+  height: 80vh;
+  padding: var(--common-padding);
+  display: flex;
+  align-items: center;
+}
+
+.homepage-counter .counter-content h1 {
+  color: var(--white);
+  font-family: var(--heading-font);
+  font-size: 55px;
+  line-height: 80px;
+}
+
+.homepage-counter .counter-content hr {
+  width: 35%;
+  height: 1px;
+  background-color: var(--secondary-color);
+  opacity: 1;
+}
+
+.homepage-counter .counter-content p {
+  color: #a9a9a9;
+  font-family: var(--paragraph-font);
+  font-size: 17px;
+  line-height: 30px;
+  letter-spacing: 1px;
+  margin-top: 55px;
+}
+
+.homepage-counter .main-counter {
+  color: var(--black);
+  text-align: center;
+}
+
+.homepage-counter .main-counter span {
+  font-family: var(--paragraph-font);
+  font-size: 90px;
+  -webkit-text-stroke: 1px rgb(255 255 255);
+  -webkit-text-fill-color: transparent;
+  font-weight: 700;
+  position: relative;
+}
+
+.homepage-counter .main-counter span.kclass::after {
+  position: absolute;
+  content: "+";
+  font-family: var(--paragraph-font);
+  font-size: 80px;
+  color: var(--white);
+  right: -50px;
+  top: -7px;
+}
+
+.homepage-counter .main-counter p {
+  font-family: var(--heading-font);
+  font-size: 21px;
+  color: var(--secondary-color);
+  margin: 0;
+  margin-top: -10px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
+}
+
+.mt-80 {
+  margin-top: 80px;
+}
+
+/********************Homepage Brands Carousel css************************/
+.brands-container {
+  width: 80%;
+  margin: 0 auto;
+  display: block;
+  margin-top: 80px;
+}
+
+.brands-carousel {
+  text-align: center;
+  width: 100%;
+  padding: var(--common-padding);
+}
+
+.brands-carousel .slick-list {
+  height: 90px;
+}
+
+
+
+.brands-carousel .img-box {
+  box-shadow: var(--tc-shadow-1);
+  background-color: var(--white);
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.brands-carousel .img-box:hover img {
+  transform: scale(1.1);
+  transition: all 0.5s ease;
+}
+
+.brands-carousel .img-box img {
+  width: 80%;
+  margin: 0 auto;
+  transition: all 0.5s ease;
+}
+
+.brands-carousel .slick-slide {
+  margin-right: 30px;
+}
+
+/**********************Contact Us css*************************/
+.contact-us {
+  width: 100%;
+  padding: var(--common-padding);
+}
+
+.contact-form {
+  background-color: #ededed;
+  padding: 60px;
+  border-radius: 5px;
+}
+
+.contact-form h4 {
+  font-family: var(--paragraph-font);
+  font-size: 40px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form form input {
+  padding: 15px 20px;
+  color: var(--black);
+  font-family: var(--paragraph-font);
+  margin-top: 30px;
+  font-size: 17px;
+  border: none;
+  font-weight: 500;
+}
+
+
+
+.contact-form form input::placeholder {
+  opacity: 1;
+  color: var(--black);
+}
+
+.contact-form form input::-ms-input-placeholder {
+  color: var(--black);
+  opacity: 1;
+}
+
+.contact-form form textarea {
+  font-family: var(--paragraph-font);
+  color: var(--black);
+  margin-top: 30px;
+  font-size: 16px;
+  border: none;
+  font-weight: 500;
+}
+
+.contact-form .form-control:focus {
+  box-shadow: none;
+  border: none;
+}
+
+.contact-form form textarea::placeholder {
+  opacity: 1;
+  color: var(--black);
+}
+
+.contact-form form textarea::-ms-input-placeholder {
+  color: var(--black);
+  opacity: 1;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.form-submit-btn {
+  padding: 10px 20px;
+  background-color: var(--bg-color);
+  color: var(--white);
+  font-family: var(--paragraph-font);
+  width: auto;
+  outline: none;
+  border: none;
+  border-radius: 35px;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-top: 30px;
+  transition: all 0.5s ease;
+}
+
+.form-submit-btn:hover {
+  background-color: var(--secondary-color);
+  transition: all 0.5s ease;
+}
+
+.contact-info {
+  padding: 0 0 0 70px;
+}
+
+.contact-info h1 {
+  font-family: var(--paragraph-font);
+  font-size: 40px;
+  color: var(--bg-color);
+  font-weight: 700;
+  line-height: 50px;
+  margin-bottom: 15px;
+}
+
+.contact-info p {
+  font-family: var(--paragraph-font);
+  font-size: 17px;
+  line-height: 28px;
+  color: var(--bg-color);
+  font-weight: 500;
+}
+
+.contact-info p a {
+  color: var(--bg-color);
+  text-decoration: none;
+}
+
+.contact-info ul {
+  margin-top: 40px;
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.contact-info ul li {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  padding: 15px;
+}
+
+.contact-info ul li .icons {
+  width: 40px;
+  height: 40px;
+  background-color: var(--secondary-color);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 15px;
+}
+
+.contact-info ul li .icons img {
+  width: 50%;
+}
+
+.contact-info ul li .address-content span {
+  font-size: 21px;
+  font-family: var(--paragraph-font);
+  font-weight: 700;
+  color: var(--black);
+  margin-bottom: 5px;
+  display: block;
+}
+
+/***********************our services section css****************************/
+.our-services {
+  width: 100%;
+  padding: var(--common-padding);
+}
+
+/**********************Home about css***************************/
+.home-about-us {
+  width: 100%;
+  padding: var(--common-padding);
+}
+
+.about-one__thumb {
+  position: relative;
+  z-index: 1;
+}
+
+
+
+.about-one__thumb img {
+  position: relative;
+  object-fit: cover;
+  width: 100%;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.about-one .sec-title {
+  padding-bottom: 20px;
+}
+
+.about-one .sec-title h6 {
+  font-size: 20px;
+  font-family: var(--heading-font);
+  margin-bottom: 25px;
+  font-weight: 500;
+  position: relative;
+}
+
+.about-one .sec-title h6::before {
+  position: absolute;
+  content: "";
+  width: 68%;
+  background-color: var(--secondary-color);
+  left: 0;
+  bottom: -10px;
+  height: 0.1em;
+}
+
+
+.about-one .sec-title h3 {
+  font-size: 50px;
+  font-family: var(--paragraph-font);
+  font-weight: 600;
+  line-height: 65px;
+}
+
+.about-one__top__text {
+  font-size: 17px;
+  font-family: var(--paragraph-font);
+  font-weight: 400;
+  color: var(--bg-color);
+  line-height: 30px;
+  margin-bottom: 25px;
+}
+
+.about-one__list {
+  margin-bottom: 0;
+}
+
+.about-one__list__item {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 175%;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  text-transform: capitalize;
+  color: var(--wallox-text-dark, var(--bg-color));
+  text-shadow: 0 0 0.1px currentColor;
+  font-family: var(--paragraph-font);
+}
+
+.about-one__list__item i {
+  color: var(--secondary-color);
+  font-size: 20px;
+  margin-right: 10px;
+  font-family: 'Font Awesome\ 5 Free';
+}
+
+.about-one__list__item+.about-one__list__item {
+  margin-top: 10px;
+}
+
+.about-one__video {
+  position: relative;
+}
+
+.about-one__video img {
+  position: relative;
+  object-fit: cover;
+  width: 100%;
+  border-radius: 30px;
+}
+
+.about-one__video-popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.about-one__video-popup i {
+  font-size: 20px;
+}
+
+.about-one__video-popup a {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  color: var(--secondary-color);
+  background-color: var(--white);
+  transition: all 0.4s ease-in-out;
+  text-decoration: none;
+}
+
+.about-one__video-popup a:hover {
+  background: var(--bg-color);
+  color: var(--white);
+}
+
+.about-one__funfact {
+  border-radius: 100px;
+  background-color: var(--wallox-base, var(--secondary-color));
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  min-height: 270px;
+  bottom: 40px;
+  left: 40px;
+  transform: rotate(-180deg);
+  position: absolute;
+  writing-mode: vertical-rl;
+}
+
+.about-one__count {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 38px;
+  text-transform: capitalize;
+  color: var(--wallox-text-dark, #2E2A20);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 91px;
+  height: 113px;
+  background: #FFFFFF;
+  border-radius: 100px;
+  margin: 0;
+  text-shadow: 0 0 0.1px currentColor;
+  font-family: var(--heading-font);
+}
+
+a.wallox-btn {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-appearance: none;
+  border: none;
+  outline: none !important;
+  background-color: var(--bg-color);
+  color: var(--white);
+  font-family: var(--heading-font);
+  padding: 15px 24px;
+  transition: 500ms;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  text-transform: capitalize;
+  border-radius: 100px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  text-decoration: none;
+}
+
+a.wallox-btn:hover {
+  background-color: var(--secondary-color);
+  transition: 500ms;
+}
+
+.about-one__thumb__item {
+  width: 90%;
+  overflow: hidden;
+  border-radius: 100px 20px;
+  transition: 0.5s;
+}
+
+.about-one__thumb__item:hover img {
+  transform: scale(1.1);
+}
+
+.about-one__funfact__text {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: capitalize;
+  color: var(--wallox-text-dark, var(--white));
+  margin-bottom: 0;
+  padding-bottom: 0;
+  margin: 0;
+  font-family: var(--paragraph-font);
+}
+
+.about-one__client {
+  margin-top: 35px;
+}
+
+
+
+
+.about-one__client__item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.about-one__client__thumb img {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: 3px solid var(--wallox-white, #fff);
+  margin-left: -20px;
+}
+
+.about-one__client__thumb img:first-child {
+  margin-left: 0;
+}
+
+.about-one__client__star {
+  font-size: 16px;
+  color: var(--wallox-base, #DF9E42);
+  letter-spacing: 0.1px;
+  margin-bottom: 0;
+}
+
+.about-one__client__text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 114%;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  text-transform: capitalize;
+  color: var(--wallox-text, #7E7C76);
+}
+
+.about-one__shape {
+  position: absolute;
+  left: 0;
+  bottom: 35%;
+  animation: topToBottom 3s ease-in-out infinite;
+  z-index: -1;
+}
+
+.about-one__shape-two {
+  position: absolute;
+  right: 0;
+  bottom: 20%;
+  animation: rotated 10s infinite linear;
+  z-index: -1;
+}
+
+/*********************why mmf css**************************/
+.why-mmf {
+  width: 100%;
+  padding: var(--common-padding);
+  background-image: url("../img/why-mmf-bg.webp");
+  position: relative;
+  background-attachment: fixed;
+}
+
+.why-mmf::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #15152ac2;
+  z-index: 0;
+}
+
+.why-mmf-main {
+  position: relative;
+}
+
+.why-mmf h1 {
+  color: var(--white);
+  margin-bottom: 15px;
+}
+
+.why-mmf p {
+  text-align: center;
+  color: var(--white);
+  font-family: var(--paragraph-font);
+  margin-bottom: 60px;
+  line-height: 28px;
+}
+
+.why-mmf-content i {
+  font-size: 50px;
+  color: var(--secondary-color);
+}
+
+.why-mmf-content img {
+  width: 11%;
+  margin-bottom: 20px;
+}
+
+.why-mmf-content h4 {
+  font-family: var(--heading-font);
+  color: var(--secondary-color);
+  font-size: 24px;
+}
+
+.why-mmf-content span {
+  font-family: var(--paragraph-font);
+  font-size: 17px;
+  color: var(--white);
+  display: block;
+  margin-top: 13px;
+  line-height: 28px;
+}
+
+.why-mmf-content {
+  background-color: #ffffff1f;
+  padding: 30px;
+  border-radius: 10px;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  border: 1px solid var(--white);
+}
+
+/*************************our services css****************************/
+.our-services {
+  width: 100%;
+  background-color: var(--bg-color);
+  background-image: url("../img/service-bg-shape.png");
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 100% auto;
+  padding: var(--common-padding);
+}
+
+
+.our-services h1 {
+  color: var(--white);
+}
+
+.our-services h4 {
+  font-size: 20px;
+  font-family: var(--heading-font);
+  margin-bottom: 25px;
+  font-weight: 500;
+  position: relative;
+  text-align: center;
+  color: var(--white);
+}
+
+.cs_img_box.cs_style_1 {
+  padding-right: 56px;
+}
+
+.cs_img_box img {
+  width: 100%;
+  border-radius: 20px;
+}
+
+.cs_gap_y_64 {
+  gap: 80px 0;
+}
+
+.cs_iconbox.cs_style_1 .cs_iconbox_icon {
+  height: 48px;
+  width: 48px;
+  position: relative;
+  font-size: 25px;
+  color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cs_gap_y_50 {
+  margin-top: 90px;
+}
+
+.cs_iconbox.cs_style_1 .cs_iconbox_icon::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: #e1ece2;
+}
+
+.cs_fs_24 {
+  font-size: 24px;
+  line-height: 1.33em;
+}
+
+.cs_mb_24 {
+  margin-bottom: 24px;
+}
+
+.cs_mb_12 {
+  margin-bottom: 12px;
+}
+
+.cs_fs_24 {
+  font-size: 26px;
+  line-height: 1.33em;
+  font-family: var(--heading-font);
+  color: var(--secondary-color);
+
+}
+
+.cs_iconbox.cs_style_1 .cs_iconbox_icon i {
+  position: relative;
+  z-index: 2;
+  color: var(--primary-color);
+}
+
+.cs_iconbox p {
+  font-size: 17px;
+  font-family: var(--paragraph-font);
+  color: var(--white);
+  line-height: 30px;
+}
+
+.cs_iconbox {
+  padding: 0 30px 0 0;
 }
