--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,6 @@ input[type=number] {
 }
 
 .slider-content img {
-  max-width: 100%;
   height: auto;
   opacity: 1 !important;
   animation-duration: 3s;
@@ -235,7 +234,7 @@ input[type=number] {
 }
 
 .slider-thumb-content h4 {
-  font-size: 16px;
+  font-size: 18px;
   font-family: var(--paragraph-font);
   margin-left: 10px;
   line-height: 22px;
@@ -1028,7 +1027,7 @@ a.wallox-btn:hover {
 }
 
 .cs_img_box img {
-  width: 100%;
+  width: 85%;
   border-radius: 20px;
 }
 
@@ -1098,3 +1097,227 @@ a.wallox-btn:hover {
 .cs_iconbox {
   padding: 0 30px 0 0;
 }
+/*********************Homepage Network Section***********************/
+.homepage-network{
+  width: 100%;
+  padding: var(--common-padding);
+  background-color: var(--bg-color); 
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.homepage-network .network-content{
+width: 100%;
+}
+.homepage-network .network-content p{
+  font-size: 19px;
+  font-family: var(--paragraph-font);
+  line-height: 40px;
+  color: var(--white);
+}
+.know-more{
+  padding: 10px 20px;
+  background-color: var(--secondary-color);
+  color: var(--white);
+  font-size: 17px;
+  border: none;
+  outline: none;
+  border-radius: 50px;
+  font-family: var(--heading-font);
+  font-weight: 400;
+  margin-top: 40px;
+  transition: all 0.5s ease;
+}
+.know-more:hover{
+  background-color: var(--white);
+  transition: all 0.5s ease;
+}
+.know-more a{
+  text-decoration: none;
+  color:var(--black);
+}
+.homepage-network .network-content p span{
+  color: var(--secondary-color);
+  font-size: 28px;
+  font-family: var(--heading-font);
+}
+.video-section h1{
+  font-family: var(--heading-font);
+  font-size: 55px;
+  color: var(--white);
+  }
+  .video-section p{
+    font-size: 18px;
+    font-family: var(--paragraph-font);
+    color: #a1cb2c;
+    line-height: 30px;
+    margin-bottom:25px;
+  }
+  .video-section img{
+    width: 100%;
+  }
+
+  /**********************Footer css**********************/
+  .footer-section{
+    width: 100%;
+    padding: 4% 0;
+    background-color: var(--black);
+  }
+  .footer-section ul{
+    margin: 0;
+    padding: 0;
+  }
+  .footer-section ul li{
+    list-style: none;
+    color: var(--white);
+  }
+  .footer-section p{
+    color: var(--white);
+    font-size: 15px;
+    font-family: var(--paragraph-font);
+    line-height: 26px;
+  }
+  .footer-section h2{
+    font-family: var(--paragraph-font);
+    color: var(--secondary-color);
+    font-size: 24px;
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+  }
+  .footer-section .address-content li{
+    display: flex;
+  
+  }
+  .footer-section .footer-info img{
+    width: 25%;
+  }
+  .footer-section .footer-list{
+    text-transform: uppercase;
+  }
+  .footer-section .footer-list li{
+    margin-bottom: 10px;
+  }
+  .footer-section .address-content li{
+    margin-bottom: 18px;
+  }
+  .footer-section .address-content p{
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+  .footer-section .address-content span{
+    color: var(--secondary-color);
+    font-size: 21px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+  }
+  .footer-section a{
+    color: var(--white);
+    text-decoration: none;
+    font-weight: 500;
+  
+  }
+  .footer-copyright{
+    padding: 8px 0;
+    background-color: var(--white);
+  }
+  .footer-copyright p{
+    font-size: 12px;
+    font-family: var(--paragraph-font);
+    font-weight: 500;
+  }
+  .footer-section  .social-media li{
+    display: flex;
+    width: 43px;
+    height: 43px;
+    background-color: white;
+    border-radius: 38px;
+    float: left;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+  }
+  .footer-section  .social-media li:hover{
+    background-color: var(--secondary-color);
+    color: var(--white);
+    transition: all 0.5s ease;
+  }
+  .footer-section  .social-media li a{
+    color: var(--bg-color);
+  }
+  .footer-section .footer-list li:nth-last-child(1){
+    margin-bottom: 0;
+  }
+#map{
+  width: 100%;
+  height: 250px;
+}
+  /*********************our partners css********************/
+  .home-our-partners{
+    width: 100%;
+    padding: var(--common-padding);
+    background: #f7f7f7;
+    border-radius: 25px;
+    text-align: center;
+  }
+  .home-our-partners p{
+    font-family: var(--paragraph-font);
+    font-size: 17px;
+    text-align: center;
+    line-height: 28px;
+    margin-top: 15px;
+  }
+  .partners-section .partners-img img{
+    margin: 0 auto;
+    display: block;
+    width: 55%;
+  }
+  .mb-50{
+    margin-bottom: 50px;
+  }
+  .mt-70{
+    margin-top: 70px;
+  }
+  .partners-section{
+    background: #a5ce3814;
+    padding: 60px 0;
+    border-radius: 30px;
+  }
+  /**************scroll to top css****************/
+  #scroll-to-top-button {
+    display: inline-block;
+    background-color: var(--secondary-color);
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    transition: background-color .3s, opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+    display: flex;
+    color: var(--bg-color);
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 25px;
+  }
+
+  #scroll-to-top-button:hover {
+    cursor: pointer;
+    background-color: var(--white);
+  }
+  #scroll-to-top-button:active {
+    background-color: var(--white);
+  }
+  #scroll-to-top-button.show {
+    opacity: 1;
+    visibility: visible;
+  }
